Implementation de la base de code pour User et JobDescription

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#chaine de connexion
+spring.datasource.url=jdbc:mysql://localhost:3306/orio_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+server.port=8081
 
+#mode hibernate
+spring.jpa.hibernate.ddl-auto=update
