--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
+# Activer l'affichage des requêtes SQL dans la console
+spring.jpa.show-sql=true
+
+# Formater les requêtes SQL pour une meilleure lisibilité
+spring.jpa.properties.hibernate.format_sql=true
